deploy/k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solutio-web
  namespace: solutio-prod
spec:
  type: ClusterIP
  selector: { app: solutio-web }
  ports:
    - name: http
      port: 80
      targetPort: http
