deploy/k8s/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solutio-tailscale
  namespace: solutio-prod
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: solutio-web
      port:
        number: 80
  tls:
    - hosts:
        - solutio
